fix compeonents
